--- a/html/web-3.html
+++ b/html/web-3.html
@@ -1,33 +1,74 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>圣诞树</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>day3</title>
 
     <style>
-        /*div{*/
-            /*width: 300px;*/
-            /*height: 200px;*/
-            /*background-color: chartreuse;*/
-
-        /*}*/
-        .tree0{
-            width: 50px;
-            height: 50px;
-            position: fixed;
-            top:100px;
-            background-color: #ff8413;
-            border-left:500px solid #ffffff;
-            border-right: 500px solid #ffffff;
-            border-bottom: 500px solid green;
+        div{
+            width: 200px;
+            height:200px;
+            background: #000;
         }
+        #dd{
+            width: 300px;
+            height:300px;
+            background: #69ffcc;
+        }
+        .dd{
+            color: yellow;
+        }
+        a{
+            color: #ff00ff;
+            font-size: 30px;
+        }
+        a:hover {
+            color: green;
+        }
+        .abc{
+            color: blue;
+        }
+        ul li:first-child{
+            color:yellow;
+            background: #000;
+        }
+        ul li:last-child{
+            color: green;
+        }
+        ul li:only-child{
+            color: red;
+        }
+
 
     </style>
 </head>
 <body>
-    <div class="tree0"></div>
-    <!--<div class="tree1">    </div>-->
-    <!--<div class="tree2"></div>-->
-    <!--<div class="tree3"></div>-->
+        <div style="border: 20px solid #000">
+            <h2 style="color: red;">css </h2>
+        </div>
+
+        <table></table>
+        <form action=""></form>
+        <div id="dd" class="xdd">
+            <p id="mm" class="xmm">我是p标签</p>
+            <a href="gg" href="http://www.baidu.com">---百度----</a>
+            <h1>我是h1</h1>
+            <span>w shi span</span>
+        </div>
+        <div>
+            <a href="333">这是一个超链接</a>
+            <p>今天天气不错，大家u有没有出游计划</p>
+        </div>
+        <ul>
+            <li CLASS="abc" >11111</li>
+            <li>22222</li>
+            <li>333333</li>
+            <li>4444</li>
+            <li>5555</li>
+        </ul>
+
 </body>
 </html>
