--- a/html/web-5.html
+++ b/html/web-5.html
@@ -9,7 +9,7 @@
             height: 600px;
             border:10px solid #ff6c77;
             margin-bottom: 20px;
-            /*-webkit-animation: circle 1s infinite linear;*/
+            -webkit-animation: circle 1s infinite linear;
         }
         @-webkit-keyframes circle{
         0%{ transform:rotate(0deg); }
