--- a/html/web-6.html
+++ b/html/web-6.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
+<script src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
+
+
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>random data</title>
 </head>
 <body>
+<div id="container" style="min-width:400px;height:400px"></div>
+
+
+
+<script>
+$(function () {
+    $('#container').highcharts({
+        title: {
+            text: 'rhel 监控',
+            x: -20 //center
+        },
+        subtitle: {
+            text: 'Source: WorldClimate.com',
+            x: -20
+        },
+        xAxis: {
+            categories:
+        },
+        yAxis: {
+            title: {
+                text: 'percent'
+            },
+            plotLines: [{
+                value: 0,
+                width: 1,
+                color: '#808080'
+            }]
+        },
+        tooltip: {
+            valueSuffix: '°C'
+        },
+        legend: {
+            layout: 'vertical',
+            align: 'right',
+            verticalAlign: 'middle',
+            borderWidth: 0
+        },
+        series: [
+                seriesreplace
+
+            ]
+    });
+});
+
+
+</script>
+
+
 
 </body>
 </html>
